Fix hyphen issue on Firefox

--- a/styles/structure.css
+++ b/styles/structure.css
@@ -25,10 +25,10 @@ body
   
   /* line behavior */
   orphans:2;
-  -webkit-hyphens:auto;
-  -moz-hyphens:auto;
-  -ms-hyphens:auto;
-  hyphens:auto;
+  -webkit-hyphens: manual;
+  -moz-hyphens: manual;
+  -ms-hyphens: manual;
+  hyphens: manual;
   word-break:normal;
 }
 
